--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="contenedor">
         <header>
             <h1>Silblanc</h1>
-            <h2>Pisos y revestimientos0</h2>
+            <h2>Pisos y revestimientos</h2>
         </header>
         <nav>
             <ul>
@@ -36,8 +36,8 @@
         <footer>
             <h4>copyright-todos los derechos de autor reservados</h4>
             <p>seguinos en nuestras redes</p>
-            <a href="hptts://instagram.com/silblanc_revestimientos" target="BLANK" alt="instagram" id="instagram"></a>
-            <img src="img/whatsapp.png" alt="whatsapp" id="wpp"/><b>1151031285</b>
+            <a href="hptts://instagram.com/silblanc_revestimientos" target="BLANK"><img src="img/instagram.png"alt="instagram" id="instagram" /></a><br/>
+            <img src="img/whatsapp.png" alt="whatsapp" id="wpp"/><b>1151031285</b><br/>
             <img src="img/ubicacion.png" alt="ubicacion" id="ubicacion"/>Tristan Suarez, Buenos Aires
         </footer>
     </div>
