--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <footer>
             <h4>copyright-todos los derechos de autor reservados</h4>
             <p>seguinos en nuestras redes</p>
-            <a href="hptts://instagram.com/silblanc_revestimientos" target="BLANK"><img src="img/instagram.png"alt="instagram" id="instagram" /></a><br/>
+            <a href="https://instagram.com/silblanc_revestimientos?igshid=YmMyMTA2M2Y" target="BLANK"><img src="img/instagram.png"alt="instagram" id="instagram" /></a><br/>
             <img src="img/whatsapp.png" alt="whatsapp" id="wpp"/><b>1151031285</b><br/>
             <img src="img/ubicacion.png" alt="ubicacion" id="ubicacion"/>Tristan Suarez, Buenos Aires
         </footer>
